--- a/extra/layout.css
+++ b/extra/layout.css
@@ -1,6 +1,4 @@
 /** ********************************************** **
-	@Author			Dorin Grigoras
-	@Website		www.stepofweb.com
 	@Last Update	10:47 AM Monday, February 17, 2014
 
 	TABLE CONTENTS
@@ -911,7 +909,7 @@ header .navbar.bottom {
 		-moz-background-size: cover;
 		-o-background-size: cover;
 		background-size: cover;
-		background-position:center center;
+		background-color: red;
 		background-repeat:no-repeat;
 		height:100%;
 		overflow:hidden;
