--- a/extra/layout.css
+++ b/extra/layout.css
@@ -1405,6 +1405,6 @@ a, a:hover, a:active, a:focus {
 
 header .nav.navbar-nav {
 	z-index: 999999;
-	background-color: red;
+	background-color: yellow;
 	position: absolute;
 }
