--- a/extra/layout.css
+++ b/extra/layout.css
@@ -1404,7 +1404,7 @@ a, a:hover, a:active, a:focus {
 
 	#header{
 		position: absolute;
-		width: 359px;
+		width: 100%;
 		z-index:2000000;
 	}
 }
